sas-core/main/default/objects/Settlement_Bank_Setting__mdt/Settlement_Bank_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Settlement Bank Setting</label>
    <pluralLabel>Settlement Bank Settings</pluralLabel>
</CustomObject>