sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/accountHolderName__c.field-meta.xml
<CustomField>
    <fullName>accountHolderName__c</fullName>
    <label>Account Holder Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>