sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/addressLine1__c.field-meta.xml
<CustomField>
    <fullName>addressLine1__c</fullName>
    <label>Bank Address Line 1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>