sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>