sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/bankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>bankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>