sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/bankEDIIDNumber__c.field-meta.xml
<CustomField>
    <fullName>bankEDIIDNumber__c</fullName>
    <label>Bank EDI ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>