sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/bankSiteCode__c.field-meta.xml
<CustomField>
    <fullName>bankSiteCode__c</fullName>
    <label>Bank Site Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>