sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>Bank City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>