sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>Bank Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>