sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/EFT_Requester__c.field-meta.xml
<CustomField>
    <fullName>EFT_Requester__c</fullName>
    <label>EFT Requester</label>
    <length>15</length>
    <type>Text</type>
</CustomField>