sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>Bank Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>