sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/ref1Batch__c.field-meta.xml
<CustomField>
    <fullName>ref1Batch__c</fullName>
    <label>Batch Reference Start</label>
    <length>22</length>
    <type>Text</type>
</CustomField>