sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/tradingPartnerCode__c.field-meta.xml
<CustomField>
    <fullName>tradingPartnerCode__c</fullName>
    <label>Trading Partner Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>