sas-core/main/default/objects/Settlement_Bank_Setting__mdt/fields/translatorCode__c.field-meta.xml
<CustomField>
    <fullName>translatorCode__c</fullName>
    <label>Translator Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>